arkts_static_test/03_Types/ets_cases/3.17.1_Readonly_Tuple_Types/cross_lang_verify/compile-fail/TYP_03_17_01_005.swift
/**
 * Swift cross-language verification for TYP_03_17_01_005_FAIL_STRING_WRITE
 * Swift let 元组的元素不能修改
 */
import Foundation

let tuple: (Int, String) = (1, "abc")

// Swift: let 元组的元素不能修改
// tuple.1 = "xyz"  // 编译错误: Cannot assign to property: 'tuple' is a 'let' constant

print("Swift: let tuple elements cannot be modified")
print("verified")
